<resources>
    <string name="app_name">GridImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter Search Query</string>
    <string name="search_label">Search</string>
    <string name="image_title">Image Title</string>
    <string name="image_result">Image Result</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="advanced_search">Advanced Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>

    <string-array name="image_sizes">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string-array name="colors">
        <item>black</item>
        <item>white</item>
        <item>blue</item>
        <item>red</item>
        <item>yellow</item>
        <item>orange</item>
        <item>pink</item>
        <item>green</item>
        <item>purple</item>
        <item>brown</item>
        <item>gray</item>
    </string-array>

    <string-array name="image_types">
        <item>faces</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_filter_dialog">FilterDialogActivity</string>
</resources>
